--- a/Devtest/package.json
+++ b/Devtest/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "devtest",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
-    "nodemon": "^1.19.1"
-  }
+	"name": "devtest",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json, ./npm-debug.log --copy-files",
+		"dev": "nodemon --exec babel-node ./bin/www",
+		"start": "npm run build && node dist/bin/www"
+	},
+	"dependencies": {
+		"cookie-parser": "~1.4.3",
+		"debug": "~2.6.9",
+		"ejs": "~2.5.7",
+		"express": "~4.16.0",
+		"http-errors": "~1.6.2",
+		"morgan": "~1.9.0",
+		"nodemon": "^1.19.1"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.26.0",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-es2015": "^6.24.1",
+		"rimraf": "^2.6.3"
+	}
 }
